--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,11 @@
     }
   },
   "require": {
-    "php": "^7.4",
-    "ext-ds": "*"
+    "php": "^8.0"
   },
   "require-dev": {
-    "php-ds/php-ds": "^1.0",
     "phpunit/phpunit": "^9.0",
-    "limedeck/phpunit-detailed-printer": "^6.0",
-    "fzaninotto/faker": "^1.0"
+    "limedeck/phpunit-detailed-printer": "^6.0"
   },
   "scripts": {
     "test": "vendor/bin/phpunit"
